testsuite/tests/ffi/should_fail/ccfail008.hs
module Ccfail008 where

foreign import ccall "dynamic" f :: IO Int